[gd_scene load_steps=5 format=3 uid="uid://dnk2cpccrkewp"]

[ext_resource type="Script" path="res://Scripts/death_zone_agility.gd" id="1_kt8wv"]
[ext_resource type="Shader" path="res://Shader/cyber glitch.gdshader" id="2_rkrrd"]
[ext_resource type="AudioStream" uid="uid://cch46hh63hnvg" path="res://Sound/warning.wav" id="3_fqr6g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2cv1q"]
shader = ExtResource("2_rkrrd")
shader_parameter/r_displacement = Vector2(0, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(0, 0)

[node name="DeathZone" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_kt8wv")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CA shader" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2cv1q")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fqr6g")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
